# Titan_Trading_Engine

./: .gitignore  IMPLEMENTATION_SUMMARY.md  MANIFEST.md  PROJECT_COMPLETION.md  QUICK_REFERENCE.md  README.md  main.py  pyproject.toml  requirements.txt  validate.py
src/: __init__.py
src/analytics/: __init__.py  metrics.py
src/core/: __init__.py  engine.py  events.py  feed.py
src/execution/: __init__.py  risk.py
src/strategies/: __init__.py  math_utils.py  mtf_analyzer.py  sr_detector.py  supervisor.py
tests/: conftest.py  test_events.py  test_math_utils.py  test_supervisor.py
